<resources>
    <string name="app_name">Blood Donation</string>
    <string name="spinner_title">Select State</string>
    <string name="facebook_app_id">1605525719759622</string>
    <string name="title_activity_blog">blog</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_updateprofile">Update Profile</string>
    <string name="nav_item_whydonate">Why Donate</string>
    <string name="nav_item_testimonial">Testimonials</string>
    <string name="nav_item_logout">Logout</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_updateprofile</item>
        <item>@string/nav_item_whydonate</item>
        <item>@string/nav_item_testimonial</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="title_updateprofile">Update Profile</string>
    <string name="title_whydonate">Why Donate</string>
    <string name="title_home">Home</string>
    <string name="title_testimonial">Testimonials</string>
    <string name="title_logout">Logout</string>

    <string name="spinner_title3">Select Gender-</string>
    <string name="spinner_title4">Select Age-</string>
    <string name="spinner_title5">Select Area of Interest-</string>
    <string name="spinner_title6">Select Volunteering Type-</string>
    <string name="spinner_title7">Select Time-</string>
    <string name="spinner_title8">Select Place-</string>
    <string name="spinner_title9">Select from following-</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
</resources>
