<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bobby.blooddonation.volunteer"
    android:background="#feb13f">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/imageView23"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/volunteerregistration" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerInParent="true"
        android:background="#feb13f"
        android:layout_below="@+id/imageView23">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#feb13f">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:id="@+id/textView18"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age"
                android:id="@+id/textView19"
                android:layout_below="@+id/textView18"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Which one of the following areas would you like to contribute?"
                android:id="@+id/textView20"
                android:layout_below="@+id/textView19"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="What kind of volunteering you would like to do?"
                android:id="@+id/textView21"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="18dp"
                android:layout_below="@+id/spinner5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="How many days in a week you can work?"
                android:id="@+id/textView22"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#000000"
                android:layout_below="@+id/spinner6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please tell us about your willingness to travel?"
                android:id="@+id/textView23"
                android:layout_below="@+id/spinner7"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#000000"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="How did you come to know about us?"
                android:id="@+id/textView24"
                android:layout_below="@+id/spinner8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#000000"
                android:visibility="visible"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView25"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinner9"
                android:textSize="12dp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp" />



            <Spinner
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/spinner3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:layout_alignBottom="@+id/textView18"
                android:layout_toRightOf="@+id/textView18"
                android:prompt="@string/spinner_title3"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/spinner4"
                android:layout_toRightOf="@+id/textView19"
                android:layout_toEndOf="@+id/textView18"
                android:layout_alignBottom="@+id/textView19"
                android:prompt="@string/spinner_title4"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner5"
                android:prompt="@string/spinner_title5"
                android:layout_below="@+id/textView20"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner6"
                android:prompt="@string/spinner_title6"
                android:layout_below="@+id/textView21"
                android:layout_alignLeft="@+id/textView22"
                android:layout_alignStart="@+id/textView22"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner7"
                android:prompt="@string/spinner_title7"
                android:layout_below="@+id/textView22"
                android:layout_marginLeft="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner8"
                android:prompt="@string/spinner_title7"
                android:layout_below="@+id/textView23"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner9"
                android:prompt="@string/spinner_title7"
                android:layout_below="@+id/textView24"
                android:layout_alignLeft="@+id/textView25"
                android:layout_alignStart="@+id/textView25"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/Submit"
                android:layout_width="100dip"
                android:layout_height="45dip"
                android:text="Submit"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textSize="20dp"
                android:textColor="#f16f18"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView25"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
